--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <link rel='stylesheet' type='text/css' href='vendor/bootstrap/css/style.css' media="screen" />
+        <link href='vendor/bootstrap/css/style.css' rel='stylesheet'/>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/scrollReveal.js/3.4.0/scrollreveal.min.js"></script>
         <script src='../Js/Javascript.js' type='text/javascript'></script>
     </head>
