--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
                 </div>
                 <div id="contact">
                     <ul>
-                        <li><a id='Github' title='GitHub' href='https://github.com/edaniels20?tab=repositories' target='_blank'><img src='../img/github.png'  width='50' height='50'  /></a></li>
-                        <li><a id='Linkedin' title='Linkedin' href='https://www.linkedin.com/in/ethan-daniels-bb1351169/' target='_blank'><img src='../img/linkedin-logo.png'  width='50' height='50'  /></a></li>
-                        <li><a id='Email'  title='Email'><img src='../img/email.png'  width='50' height='50'  /></a></li>
-                        <li><a id='Resume' title='Resume' href='https://github.com/edaniels20?tab=repositories' target='_blank'><img src='../img/resume-image.png'  width='50' height='50'  /></a></li>
+                        <li><a id='Github' title='GitHub' href='https://github.com/edaniels20?tab=repositories' target='_blank'><img src='img/github.png'  width='50' height='50'  /></a></li>
+                        <li><a id='Linkedin' title='Linkedin' href='https://www.linkedin.com/in/ethan-daniels-bb1351169/' target='_blank'><img src='img/linkedin-logo.png'  width='50' height='50'  /></a></li>
+                        <li><a id='Email'  title='Email'><img src='img/email.png'  width='50' height='50'  /></a></li>
+                        <li><a id='Resume' title='Resume' href='https://github.com/edaniels20?tab=repositories' target='_blank'><img src='img/resume-image.png'  width='50' height='50'  /></a></li>
                     </ul>
                 </div>
             </div><!--Head-->
