--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <head>
         <link href='css/style.css' rel='stylesheet'/>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/scrollReveal.js/3.4.0/scrollreveal.min.js"></script>
-        <script src='Js/Javascript.js' type='text/javascript'></script>
+        <script src='js/Javascript.js' type='text/javascript'></script>
     </head>
     <body>
         <div id="nav">
