--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <link rel='stylesheet' type='text/css' href='css/style.css' />
+        <link rel='stylesheet' type='text/css' href='vendor/bootstrap/css/style.css' />
         <script src="https://cdnjs.cloudflare.com/ajax/libs/scrollReveal.js/3.4.0/scrollreveal.min.js"></script>
         <script src='https://code.jquery.com/jquery-git.min.js'></script>
         <script src='Js/Javascript.js' type='text/javascript'></script>
