--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         <link rel='stylesheet' type='text/css' href='css/style.css' />
         <script src="https://cdnjs.cloudflare.com/ajax/libs/scrollReveal.js/3.4.0/scrollreveal.min.js"></script>
         <script src='https://code.jquery.com/jquery-git.min.js'></script>
-        <script src='Js/Javascript.js' type='vendor/bootstrap/text/javascript'></script>
+        <script src='js/Javascript.js' type='text/javascript'></script>
     </head>
     <body>
         <div class='nav-parent' onmouseover='navShow()'>
