--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                                 <ul>
                                     <li><a title='GitHub' href='https://github.com/edaniels20?tab=repositories' target='_blank'><img src='img/github.png'  width='50' height='50'  /></a></li>
                                     <li><a title='Linkedin' href='https://www.linkedin.com/in/ethan-daniels-bb1351169/' target='_blank'><img src='img/linkedin-logo.png'  width='50' height='50'  /></a></li>
-                                    <li><a title='Email' class="Email"><img src='img/email.png'  width='50' height='50'  /></a></li>
+                                    <li><a title='Email' class="email"><img src='img/email.png'  width='50' height='50'  /></a></li>
                                     <li><a title='Resume' href='https://docs.google.com/document/d/19sg5uXPXLuxs_Kr7OfrYWFJBnIHM8cz6AvBhn1hdEW4/edit#' target='_blank'><img src='img/resume-image.png'  width='50' height='50'  /></a></li>
                                 </ul>
                             </div>
